@@ -1,3 +1,11 @@
+2004-02-23  Olga Rodimina  <rodimina@redhat.com>
+
+	* Makefile.am: Added 
+	gnu/java/awt/peer/gtk/GdkGraphicsEnvironment.java
+	* Makefile.in: Re-generated.
+	* gnu/java/awt/peer/gtk/GdkGraphicsEnvironment.java:
+	New Class. 
+	
 2004-02-19  Kim Ho  <kho@redhat.com>
 
 	* Makefile.am: Add BasicProgressBarUI
